--- a/k8s/auth-deployment.yaml
+++ b/k8s/auth-deployment.yaml
@@ -15,3 +15,9 @@ spec:
       containers:
         - name: auth
           image: luannguyen6052000/ticketing_auth
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
