--- a/app/auth/package.json
+++ b/app/auth/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -22,5 +29,13 @@
     "jsonwebtoken": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.3",
+    "@types/supertest": "^2.0.12",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.6",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.5.1"
   }
 }
