--- a/k8s/ingress-controller.yaml
+++ b/k8s/ingress-controller.yaml
@@ -21,3 +21,10 @@ spec:
               name: auth-srv
               port:
                 number: 3000
+        - path: /?(.*)
+          pathType: Prefix
+          backend:
+            service:
+              name: client-svc
+              port:
+                number: 3000
