--- a/app/client/package.json
+++ b/app/client/package.json
@@ -1,18 +1,21 @@
 {
   "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "",
-    "dev": "next"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "next": "^13.1.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@next/font": "13.1.4",
+    "axios": "^1.2.3",
+    "bootstrap": "^5.2.3",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.4",
+    "next": "13.1.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
