--- a/k8s/ingress-controller.yaml
+++ b/k8s/ingress-controller.yaml
@@ -18,7 +18,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: auth-srv
+              name: auth-svc
               port:
                 number: 3000
         - path: /?(.*)
