--- a/app/auth/package.json
+++ b/app/auth/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
+    "@webmak/microservices-common": "^1.0.6",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -31,11 +32,11 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^29.4.0",
     "@types/supertest": "^2.0.12",
-    "jest": "^26.6.3",
+    "jest": "^29.4.0",
     "mongodb-memory-server": "^6.9.6",
-    "supertest": "^4.0.2",
-    "ts-jest": "^25.5.1"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5"
   }
 }
