Add tickets service

--- a/skaffold/skaffold.yaml
+++ b/skaffold/skaffold.yaml
@@ -24,3 +24,11 @@ build:
         manual:
           - src: '**/*.js'
             dest: .
+    - image: luannguyen6052000/ticketing_tickets
+      context: ../app/tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
